// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/08/2010
	r184 [pakpil]
	* Fixed clif_displayexp packet. This should show won and lost experience.
	* Fixed clif_vendinglist. Should use 0x800 packet instead 0x801.

02/03/2010
	r176 [Rytech]
	*Added skill max level, SP requirements, and names for Sorcerer's summon skills.
	-I also enabled the 6 skills as their's enough support for them to appear.
	-Latest clients do support these tags, but no official icons has been released yet. So take caution for now.
	-Im now ready for its official release. =D

02/04/2010
	r176 [pakpil]
	* Fixed RK_RUNEMASTERY.
	- Fixed the max amount of each rune you can carry.
	- Fixed the ASPD bonus while using Fighting Spirit that should add +4 ASPD if you have Rune Mastery at level 10.
	* Fixed SC_FEINTBOMB. This skill have been adjusted to the official behavior.
	* Fixed WM_REVERBERATION. It can be destroyed by attacking it with ranged skills or magic. It takes 1 damage from everything.

02/02/2010
	r175 [pakpil]
	* Fixed RK_RUNEMASTERY that was crashing map_server at level lowdest than 10 while crafting.
	* Fixed SC_AUTOSHADOWSPELL that shouldn't spell physical skills. Bug report 131.

02/01/2010
	r174 [Rytech]
	*Filled in the missing spot for the Guillotine Cross exclusive headgear.
	-It appears to be Phantom Menace that gets the %10 increase. Thanks Executor.

02/01/2010
	r173 [Rytech]
	*Added completed set of exclusive 3rd job headgears.
	-Note: I need the name of the skill that damage is boosted for the Guillotine Cross.
	-Note 2: I didnt see any bonus to increase just ranged damage, so I just added a % increase.
	-No worry since jobs like Minstreal and Wanderer will use only bow, instruments, and wips.
	-ID 5759 exists in the client, but the item has not been released. So its disabled for now.

02/01/2010
	r172 [pakpil]
	* Added recoded SC_FEINTBOMB.

01/31/2010
	r170 [pakpil]