@@ -1396,6 +1396,8 @@
 2417,0,1000,0,0,0,0
 //-- WM_SEVERE_RAINSTORM
 2418,500,3000,5000,0,900:1500:2100:2500:3000,0
+//-- WM_POEMOFNETHERWORLD
+2419,2000,0,0,0,9000:11000:13000:15000:17000,8000:10000:12000:14000:16000
 //-- WM_LULLABY_DEEPSLEEP
 2422,1500,1000,10000,0,10000,0
 
