@@ -115,6 +115,7 @@
 2304,0xd1,   ,  0, 4,  -1,enemy, 0x000	//SC_FEINTBOMB
 2414,0xda,   ,  0, 2,1000,enemy, 0x018	//WM_REVERBERATION
 2418,0xdb,   ,  0,11, 300,enemy, 0x800	//WM_SEVERE_RAINSTORM
+2419,0xde,   ,  0, 3,1000,enemy, 0x010  //WM_POEMOFNETHERWORLD
 2443,0xdc,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
 2444,0xdd,   ,  0, 1,1000,enemy, 0x008	//SO_ELECTRICWALK
 2446,0x86,   ,  0, 3:3:3:4:4,1000,enemy,0x000	//SO_EARTHGRAVE
